--- a/pubs-n.html
+++ b/pubs-n.html
@@ -23,9 +23,9 @@
 </li>
 <li>Haitian Sun, Andrew O. Arnold, Tania Bedrax-Weiss, Fernando Pereira, William W. Cohen (2020): <a href="https://arxiv.org/abs/2004.03658">Faithful Embeddings for Knowledge Base Queries</a> in NeurIPS2020.<br><ul><li><font size=-1>An extension to Neural Query Language (NQL) which extends the query language to work with a "centroid-sketch" representation of sets.  The centroid encoders a geometric area, and the sketch is a randomized data structure that adds capacity to the sketch, allowing faithful differential logical reasoning to be combined with good generalization.</font></ul>
 </li>
-<li>Pat Verga, Haitian Sun, Livio Baldini Soares, and William W. Cohen (2020): <a href="https://arxiv.org/abs/2007.00849">Facts as Experts: Adaptable and Interpretable Neural Memory over Symbolic Knowledge</a> in limbo.<br><ul><li><font size=-1>Earlier draft of the NAACL paper on FILM (Fact-Injected LM).</font></ul>
+<li>Pat Verga, Haitian Sun, Livio Baldini Soares, and William W. Cohen (2020): <a href="https://arxiv.org/abs/2007.00849">Facts as Experts: Adaptable and Interpretable Neural Memory over Symbolic Knowledge</a> in arxiv.<br><ul><li><font size=-1>Earlier draft of the NAACL paper on FILM (Fact-Injected LM).</font></ul>
 </li>
-<li>William W. Cohen, Fan Yang, and Kathryn Rivard Mazaitis (2020): <a href="https://jair.org/index.php/jair/article/view/11944/26561">TensorLog: A Probabilistic Database Implemented Using Deep-Learning Infrastructure</a> in JAIR.
+<li>William W. Cohen, Fan Yang, and Kathryn Rivard Mazaitis (2020): <a href="https://jair.org/index.php/jair/article/view/11944/26561">TensorLog: A Probabilistic Database Implemented Using Deep-Learning Infrastructure</a> in JAIR.<br><ul><li><font size=-1>Most complete paper on TensorLog, a predecessor of NQL/EmQL that was a Prolog-like logic, not a dataflow query language.</font></ul>
 </li>
 <li>William W. Cohen, Haitian Sun, R. Alex Hofer, Matthew Siegler (2020): <a href="https://arxiv.org/abs/2002.06115">Scalable Neural Methods for Reasoning With a Symbolic Knowledge Base </a> in ICLR-2020.<br><ul><li><font size=-1>Paper on Neural Query Language (NQL) a differentiable dataflow query language.  NQL is useful for building KBQA systems that can be trained from denotations, but relies heavily on sparse-matrix operations that are not implemented in all accelerators.</font></ul>
 </li>
