--- a/pubs-s.html
+++ b/pubs-s.html
@@ -4,6 +4,8 @@
 <body><h3>Selected and/or recent papers by William W. Cohen</h3>
 <h3>Recent papers: 2021</h3>
 <ol>
+<li>Michiel de Jong, Yury Zemlyanskiy, Nicholas FitzGerald, Fei Sha, William Cohen (2021): <a href="https://arxiv.org/abs/2110.06176">Mention Memory: incorporating textual knowledge into Transformers through entity mention attention</a> in preparation.<br><ul><li><font size=-1>Similar to the Entities-as-Experts model, but uses a much larger memory of entity mentions, which allows the model to potentially provide meaningful provenance for information. The model, called TOME, outperforms Entities-as-Experts on several tasks, and required some non-trivial technical innovations relating to memory pre-training and efficient retrieval.</font></ul>
+</li>
 <li>Keshav Kolluru, Martin Rezk, Pat Verga, William W. Cohen, Partha Talukdar (2021): <a href="https://arxiv.org/abs/2109.14364">Multilingual Fact Linking</a> in AKBC-2021.
 </li>
 <li>Julian Martin Eisenschlos, Maharshi Gor, Thomas Muller, William W. Cohen (2021): <a href="https://arxiv.org/abs/2109.04312">MATE: Multi-view Attention for Table Transformer Efficiency</a> in EMNLP-2021.
