--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
 
 <h3 class="title">Principal Scientist, <a href="http://ai.google.com">Google AI</a></h3>
 
-<b>News:</b> I have moved to Google! Since June 2018 I have been
-starting up and leading a new research group in AI/ML that will be
-located in Pittsburgh in Google's Bakery Square location.
-
 </td> 
 </table>
 
@@ -105,18 +101,16 @@ the <a href="http://www.sigmod.org/sigmod-awards/sigmod-awards#time">SIGMOD
 
 <p>
 
-Dr. Cohen's research interests include information integration and
-machine learning, particularly information extraction, text
-categorization and learning from large datasets.  He has a
+Dr. Cohen's research interests include question answering, machine
+learning for NLP tasks, and neuro-symbolic reasoning.  He has a
 long-standing interest in statistical relational learning and learning
-models, or learning from data, that display non-trivial structure.
-He holds seven
-patents related to learning, discovery, information retrieval, and
-data integration, and is the author of more than 200 publications.
+models, or learning from data, that display non-trivial structure.  He
+holds seven patents related to learning, discovery, information
+retrieval, and data integration, and is the author of more than 200
+publications.
 
-<p>Dr. Cohen is currently on leave from his position as a Professor in
-the Department of Machine Learning, with a joint appointment in the
-Language Technology Institute.
+<p>Dr. Cohen is also a Consulting Professor at the School of Computer
+Science at Carnegie Mellon University.
 <!-- <h3 class="sec"><a name="cv">Curriculum vita</cv></h3 class="sec">
 
 <ul>
