added conditionalqa paper

--- a/pubs-a.html
+++ b/pubs-a.html
@@ -3,6 +3,8 @@
 </head>
 <body><h3>William W. Cohen's Papers: Applications</h3>
 <ol>
+<li>ConditionalQA: A Complex Reading Comprehension Dataset with Conditional Answers (2021): <a href="https://arxiv.org/abs/2110.06884">ConditionalQA: A Complex Reading Comprehension Dataset with Conditional Answers</a> in preparation.<br><ul><li><font size=-1>A novel dataset with (1) long context documents containing information that is related in logically complex ways; (2) multi-hop questions that require compositional logical reasoning. Intended as a more realistic version of ShARC, a QA task considered in 'End-to-End Multihop Retrieval for Compositional Question Answering over Long Documents'</font></ul>
+</li>
 <li>Michiel de Jong, Yury Zemlyanskiy, Nicholas FitzGerald, Fei Sha, William Cohen (2021): <a href="https://arxiv.org/abs/2110.06176">Mention Memory: incorporating textual knowledge into Transformers through entity mention attention</a> in preparation.<br><ul><li><font size=-1>Similar to the Entities-as-Experts model, but uses a much larger memory of entity mentions, which allows the model to potentially provide meaningful provenance for information. The model, called TOME, outperforms Entities-as-Experts on several tasks, and required some non-trivial technical innovations relating to memory pre-training and efficient retrieval.</font></ul>
 </li>
 <li>Keshav Kolluru, Martin Rezk, Pat Verga, William W. Cohen, Partha Talukdar (2021): <a href="https://arxiv.org/abs/2109.14364">Multilingual Fact Linking</a> in AKBC-2021.
