--- a/lineage.html
+++ b/lineage.html
@@ -64,11 +64,23 @@ So, I have two chains of "academic ancestors":
 href="http://www.genealogy.math.ndsu.nodak.edu/index.html">The
 Mathematics Geneology Project</a>
 
+<p>And going the other direction...there are several former students
+  of mine in academia, and even a few "grandchildren".
+
+<ul>			
+  <li>Einat Minkov, University of Haifa
+  <li>Bhuwan Dhingra, Duke University
+  <li>Zhilin Yang, Tsinghua University
+  <li>William Yang Wang, University of California Santa Barbara, who
+    has several PhD students of his own that are professors:
+  <ul>
+    <li>Mai Elsherief (Ph.D., 2019, Asst. Prof. at UC San Diego)
+    <li>Xin Eric Wang (Ph.D., 2020, Asst. Prof. at UC Santa Cruz)
+    <li>Wenhu Chen (PhD., 20201, will be Asst. Prof. at Univ. Waterloo in fall 2022)
+  </ul>
+</ul>
+
     <hr>
     <address>William Cohen</address>
-<!-- Created: Sat Feb 12 13:37:11 EST 2005 -->
-<!-- hhmts start -->
-Last modified: Tue 07 Jan 2020 04:59:54 PM EST
-<!-- hhmts end -->
   </body>
 </html>
