--- a/pubs-e.html
+++ b/pubs-e.html
@@ -3,7 +3,9 @@
 </head>
 <body><h3>William W. Cohen's Papers: Explanation-Based Learning</h3>
 <ol>
-<li>Danish Pruthi, Bhuwan Dhingra, Livio Baldini Soares, Michael Collins, Zachary C. Lipton, Graham Neubig, William W. Cohen (2020): <a href="https://arxiv.org/abs/2012.00893">Evaluating Explanations: How much do explanations from the teacher aid students?</a> in preparation.
+<li>Siddhant Arora, Danish Pruthi, Norman Sadeh, William W. Cohen, Zachary C. Lipton, Graham Neubig (2021): <a href="https://arxiv.org/abs/2112.09669">Explain, Edit, and Understand: Rethinking User Study Design for Evaluating Model Explanations</a> in AAAI-2022.
+</li>
+<li>Danish Pruthi, Bhuwan Dhingra, Livio Baldini Soares, Michael Collins, Zachary C. Lipton, Graham Neubig, William W. Cohen (2020): <a href="https://arxiv.org/abs/2012.00893">Evaluating Explanations: How Much Do Explanations From the Teacher Aid Students?</a> in preparation.
 </li>
 <li>William Yang Wang, Kathryn Mazaitis, and William W. Cohen (2015): <a href="postscript/ijcai-2015.pdf">A Soft Version of Predicate Invention Based on Structured Sparsity</a> in IJCAI-2015.
 </li>
