added deelio ws paper

--- a/pubs-s.html
+++ b/pubs-s.html
@@ -2,9 +2,14 @@
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body><h3>Selected and/or recent papers by William W. Cohen</h3>
+<h3>Recent papers: 2022</h3>
+<ol>
+</ol>
 <h3>Recent papers: 2021</h3>
 <ol>
 <li>Siddhant Arora, Danish Pruthi, Norman Sadeh, William W. Cohen, Zachary C. Lipton, Graham Neubig (2021): <a href="https://arxiv.org/abs/2112.09669">Explain, Edit, and Understand: Rethinking User Study Design for Evaluating Model Explanations</a> in AAAI-2022.
+</li>
+<li>Vidhisha Balachandran and Bhuwan Dhingra and Haitian Sun and Michael Collins and William W. Cohen (2021): <a href="https://aclanthology.org/2021.deelio-1.3.pdf">Investigating the Effect of Background Knowledge on Natural Questions</a> in DeeLIO-2021.<br><ul><li><font size=-1>Proceedings of Deep Learning Inside Out (DeeLIO): The 2nd Workshop on Knowledge Extraction and Integration for Deep Learning Architectures</font></ul>
 </li>
 <li>Haitian Sun, William W. Cohen, Ruslan Salakhutdinov (2021): <a href="https://arxiv.org/abs/2110.06884">ConditionalQA: A Complex Reading Comprehension Dataset with Conditional Answers</a> in preparation.<br><ul><li><font size=-1>A novel dataset with (1) long context documents containing information that is related in logically complex ways; (2) multi-hop questions that require compositional logical reasoning. Intended as a more realistic version of ShARC, a QA task considered in 'End-to-End Multihop Retrieval for Compositional Question Answering over Long Documents'</font></ul>
 </li>
@@ -46,27 +51,10 @@
 <li>Yifeng Tao, Chunhui Cai, William W. Cohen, Xinghua Lu (2020): <a href="postscript/psb-2020.pdf">From genome to phenome: Predicting multiple cancer phenotypes based on somatic genomic alternations bia the genomic impact transformer</a> in PSB-2020.
 </li>
 </ol>
-<h3>Recent papers: 2019</h3>
-<ol>
-<li>Andrew O. Arnold, William W. Cohen (2019): <a href="https://arxiv.org/abs/1911.06111">Instance-based Transfer Learning for Multilingual Deep Retrieval</a> in arxiv.
-</li>
-<li>Qiao Jin, Bhuwan Dhingra, Zhengping Liu, William W Cohen, and Xinghua Lu (2019): <a href="https://arxiv.org/pdf/1909.06146.pdf">PubMedQA: A Dataset for Biomedical Research Question Answering</a> in EMNLP-2019.
-</li>
-<li>Bhuwan Dhingra, Manaal Faruqui, Ankur Parikh, Ming-Wei Chang, Dipanjan Das, William W. Cohen (2019): <a href="http://arxiv.org/abs/1906.01081">Handling Divergent Reference Texts when Evaluating Table-to-Text Generation</a> in ACL-2019.
-</li>
-<li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in arxiv.<br><ul><li><font size=-1>Earlier version of ICLR paper on NQL.</font></ul>
-</li>
-<li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in arxiv.<br><ul><li><font size=-1>Earlier version of ICLR paper on NQL focusing on the language constructs used.</font></ul>
-</li>
-<li>Haitian Sun, Tania Bedrax-Weiss, William W. Cohen (2019): <a href="http://arxiv.org/abs/1904.09537">PullNet: Open Domain Question Answering with Iterative Retrieval on Knowledge Bases and Text</a> in EMNLP-2019.
-</li>
-<li>Qiao Jin, Bhuwan Dhingra, William W. Cohen, Xinghua Lu (2019): <a href="http://arxiv.org/abs/1904.02181">Probing Biomedical Embeddings from Language Models</a> in NAACL-2019.
-</li>
-<li>Haohan Wang, Xiang Liu, Yifeng Tao, Wenting Ye, Qiao Jin, William W. Cohen and Eric P. Xing (2019): <a href="https://www.worldscientific.com/doi/abs/10.1142/9789813279827_0011">Automatic Human-like Mining and Constructing Reliable Genetic Association Database with Deep Reinforcement Learning</a> in Biocomputing.
-</li>
-</ol>
 <h3>Selected other papers</h3>
 <ol>
+<li>Haitian Sun, Tania Bedrax-Weiss, William W. Cohen (2019): <a href="http://arxiv.org/abs/1904.09537">PullNet: Open Domain Question Answering with Iterative Retrieval on Knowledge Bases and Text</a> in EMNLP-2019.
+</li>
 <li>Zhilin Yang, Jake (Junbo) Zhao, Bhuwan Dhingra, Kaiming He, William W. Cohen, Ruslan Salakhutdinov, Yann LeCun (2018): <a href="http://arxiv.org/abs/1806.05662">GLoMo: Unsupervisedly Learned Relational Graphs as Transferable Representations</a> in NIPS-2018.
 </li>
 <li>Zhilin Yang, Peng Qi, Saizheng Zhang, Yoshua Bengio, William W. Cohen, Ruslan Salakhutdinov, Christopher D. Manning (2018): <a href="http://arxiv.org/abs/1809.09600">HotpotQA: A Dataset for Diverse, Explainable Multi-hop Question Answering</a> in EMNLP-2018.
