--- a/pubs-e.html
+++ b/pubs-e.html
@@ -3,7 +3,9 @@
 </head>
 <body><h3>William W. Cohen's Papers: Explanation-Based Learning</h3>
 <ol>
-<li>Siddhant Arora, Danish Pruthi, Norman Sadeh, William W. Cohen, Zachary C. Lipton, Graham Neubig (2021): <a href="https://arxiv.org/abs/2112.09669">Explain, Edit, and Understand: Rethinking User Study Design for Evaluating Model Explanations</a> in AAAI-2022.
+<li>Yi Tay, Vinh Q. Tran, Mostafa Dehghani, Jianmo Ni, Dara Bahri, Harsh Mehta, Zhen Qin, Kai Hui, Zhe Zhao, Jai Gupta, Tal Schuster, William W. Cohen and Donald Metzler (2022): <a href="https://arxiv.org/abs/2202.06991">Transformer Memory as a Differentiable Search Index</a> in preparation.
+</li>
+<li>Siddhant Arora, Danish Pruthi, Norman Sadeh, William W. Cohen, Zachary C. Lipton, Graham Neubig (2022): <a href="https://arxiv.org/abs/2112.09669">Explain, Edit, and Understand: Rethinking User Study Design for Evaluating Model Explanations</a> in AAAI-2022.
 </li>
 <li>Danish Pruthi, Bhuwan Dhingra, Livio Baldini Soares, Michael Collins, Zachary C. Lipton, Graham Neubig, William W. Cohen (2020): <a href="https://arxiv.org/abs/2012.00893">Evaluating Explanations: How Much Do Explanations From the Teacher Aid Students?</a> in preparation.
 </li>
