--- a/pubs-s.html
+++ b/pubs-s.html
@@ -4,11 +4,13 @@
 <body><h3>Selected and/or recent papers by William W. Cohen</h3>
 <h3>Recent papers: 2022</h3>
 <ol>
+<li>Yi Tay, Vinh Q. Tran, Mostafa Dehghani, Jianmo Ni, Dara Bahri, Harsh Mehta, Zhen Qin, Kai Hui, Zhe Zhao, Jai Gupta, Tal Schuster, William W. Cohen and Donald Metzler (2022): <a href="https://arxiv.org/abs/2202.06991">Transformer Memory as a Differentiable Search Index</a> in preparation.
+</li>
+<li>Siddhant Arora, Danish Pruthi, Norman Sadeh, William W. Cohen, Zachary C. Lipton, Graham Neubig (2022): <a href="https://arxiv.org/abs/2112.09669">Explain, Edit, and Understand: Rethinking User Study Design for Evaluating Model Explanations</a> in AAAI-2022.
+</li>
 </ol>
 <h3>Recent papers: 2021</h3>
 <ol>
-<li>Siddhant Arora, Danish Pruthi, Norman Sadeh, William W. Cohen, Zachary C. Lipton, Graham Neubig (2021): <a href="https://arxiv.org/abs/2112.09669">Explain, Edit, and Understand: Rethinking User Study Design for Evaluating Model Explanations</a> in AAAI-2022.
-</li>
 <li>Vidhisha Balachandran and Bhuwan Dhingra and Haitian Sun and Michael Collins and William W. Cohen (2021): <a href="https://aclanthology.org/2021.deelio-1.3.pdf">Investigating the Effect of Background Knowledge on Natural Questions</a> in DeeLIO-2021.<br><ul><li><font size=-1>Proceedings of Deep Learning Inside Out (DeeLIO): The 2nd Workshop on Knowledge Extraction and Integration for Deep Learning Architectures</font></ul>
 </li>
 <li>Haitian Sun, William W. Cohen, Ruslan Salakhutdinov (2021): <a href="https://arxiv.org/abs/2110.06884">ConditionalQA: A Complex Reading Comprehension Dataset with Conditional Answers</a> in preparation.<br><ul><li><font size=-1>A novel dataset with (1) long context documents containing information that is related in logically complex ways; (2) multi-hop questions that require compositional logical reasoning. Intended as a more realistic version of ShARC, a QA task considered in 'End-to-End Multihop Retrieval for Compositional Question Answering over Long Documents'</font></ul>
