--- a/pubs-s.html
+++ b/pubs-s.html
@@ -4,6 +4,8 @@
 <body><h3>Selected and/or recent papers by William W. Cohen</h3>
 <h3>Recent papers: 2022</h3>
 <ol>
+<li>Wenhu Chen, Pat Verga, Michiel de Jong, John Wieting, William W. Cohen (2022): <a href="https://arxiv.org/abs/2204.04581">Augmenting Pre-trained Language Models with QA-Memory for Open-Domain Question Answering</a> in preparation.<br><ul><li><font size=-1>Extends the techniques of Mention Memory in several important ways. (1) The memory is a memory of generated question-answer pairs, which is more interpretable than neural entity-mention encodings; (2) it is based on pre-trained T5, not a custom Transformer; and (3) it allows use of the token-level encoding of retrieved QA pairs as well as neural encodings of them for reasoning.  Using QA pairs instead of passages allows a clever pre-training trick for learning to retrieve, and the model greatly outperfoms a prior similar model (i.e., RePAQ) on smaller QA benchmarks.</font></ul>
+</li>
 <li>Yi Tay, Vinh Q. Tran, Mostafa Dehghani, Jianmo Ni, Dara Bahri, Harsh Mehta, Zhen Qin, Kai Hui, Zhe Zhao, Jai Gupta, Tal Schuster, William W. Cohen and Donald Metzler (2022): <a href="https://arxiv.org/abs/2202.06991">Transformer Memory as a Differentiable Search Index</a> in preparation.
 </li>
 <li>Siddhant Arora, Danish Pruthi, Norman Sadeh, William W. Cohen, Zachary C. Lipton, Graham Neubig (2022): <a href="https://arxiv.org/abs/2112.09669">Explain, Edit, and Understand: Rethinking User Study Design for Evaluating Model Explanations</a> in AAAI-2022.
