--- a/pubs.html
+++ b/pubs.html
@@ -4,6 +4,8 @@
 <body><h3>Papers by William W. Cohen</h3>
 <h3>Papers published in 2022</h3>
 <ol>
+<li>Wenhu Chen, William W. Cohen, Michiel De Jong, Nitish Gupta, Alessandro Presta, Pat Verga, John Wieting (2022): <a href="https://arxiv.org/abs/2207.00630">QA Is the New KR: Question-Answer Pairs as Knowledge Bases</a> in preparation.
+</li>
 <li>Haitian Sun, William W. Cohen, Ruslan Salakhutdinov (2022): <a href="https://arxiv.org/abs/2205.12898">Reasoning over Logically Interacted Conditions for Question Answering</a> in preparation.
 </li>
 <li>Wenhu Chen, Pat Verga, Michiel de Jong, John Wieting, William W. Cohen (2022): <a href="https://arxiv.org/abs/2204.04581">Augmenting Pre-trained Language Models with QA-Memory for Open-Domain Question Answering</a> in preparation.<br><ul><li><font size=-1>Extends the techniques of Mention Memory in several important ways. (1) The memory is a memory of generated question-answer pairs, which is more interpretable than neural entity-mention encodings; (2) it is based on pre-trained T5, not a custom Transformer; and (3) it allows use of the token-level encoding of retrieved QA pairs as well as neural encodings of them for reasoning.  Using QA pairs instead of passages allows a clever pre-training trick for learning to retrieve, and the model greatly outperfoms a prior similar model (i.e., RePAQ) on smaller QA benchmarks.</font></ul>
