--- a/qm/01-aside-matrices.html
+++ b/qm/01-aside-matrices.html
@@ -12,6 +12,8 @@
 <header><h1>Matrices and ML</h1></header>
 <section>
 
+<i>to rewrite</i>
+
 	  <h2>A gentle introduction to matrices</h2>
 
 	  <p>If you're not familiar with matrices, they are simply a
